--- a/style.css
+++ b/style.css
@@ -1,26 +1,26 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: optima;
 }
 
 #header {
     background-color: #A6EDF8;
-    height: 135px;
+    height: 160px;
 }
 
 #header-title {
     color: white;
     font-size: 40px;
-    font-family: optima;
     text-shadow: 3px 3px 1px #477665;
     text-align: center;
     line-height: 40px;
     padding-top: 10px;
+    letter-spacing: -2px;
 }
 
 #header-subtitle {
     font-size: 15px;
-    font-family: optima;
     text-align: center;
     line-height: 20px;
     margin-top: 5px;
@@ -40,11 +40,9 @@ body {
     background-color: #477665;
 }
 
-
 #header-navigation ul li {
     list-style: none;
     font-size: 15px;
-    font-family: optima;
     text-align: center;
     line-height: 30px;
     display: inline-block;
@@ -59,4 +57,43 @@ body {
 #header-navigation ul li a:visited {
     text-decoration: none;
     color: white;
+}
+
+#intro {
+    color: #477665;
+    font-size: 35px;
+    text-align: center;
+    padding: 30px;
+    padding-bottom: 20px;
+}
+
+#intro-text {
+    height: 330px;
+    width: 85%;
+    background-color: #477665;
+    border-radius: 10px;
+    position: relative;
+    left: 7.5%;
+}
+
+#intro-text img {
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    margin: 15px 40px 40px 40px;
+    padding: 10px 10px 10px 10px;
+    float: left;
+    background-color: white;
+}
+
+#intro-text div {
+    color: white;
+    font-weight: bold;
+    font-size: 30px;
+    padding-top: 25px;
+}
+
+#intro-text p {
+    color: white;
+    padding-right: 40px;
 }
