Finalize about me design and animations, html css and js

--- a/style.css
+++ b/style.css
@@ -68,32 +68,42 @@ body {
 }
 
 #intro-text {
-    height: 330px;
+    height: auto;
     width: 85%;
     background-color: #477665;
-    border-radius: 10px;
+    border-radius: 15px;
+    border: 8px solid white;
     position: relative;
     left: 7.5%;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+}
+
+#intro-text * {
+    pointer-events: none;
 }
 
 #intro-text img {
     width: 250px;
     height: 250px;
     border-radius: 50%;
-    margin: 15px 40px 40px 40px;
+    margin: 20px 40px 20px 40px;
     padding: 10px 10px 10px 10px;
-    float: left;
     background-color: white;
 }
 
-#intro-text div {
+#intro-text div div {
     color: white;
     font-weight: bold;
     font-size: 30px;
-    padding-top: 25px;
+    padding-top: 10px;
+    padding-left: 20px;
+    z-index: -1;
 }
 
 #intro-text p {
     color: white;
     padding-right: 40px;
+    padding-left: 20px;
 }
