Added/formatted project and contact pages, html and css

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
 #header {
     background-color: #A6EDF8;
     height: 160px;
+    position: -webkit-sticky;
 }
 
 #header-title {
@@ -209,3 +210,49 @@ hr {
     text-align: center;
     width: auto;
 }
+
+h1 {
+    color: #477665;
+    font-size: 35px;
+    text-align: center;
+    padding: 30px;
+    padding-bottom: 20px;
+    font-weight: normal;
+    height: 300px;
+    position: relative;
+    top: 100px;
+}
+
+input[type=text], textarea {
+    width: 100%;
+    padding: 10px;
+    font-family: optima;
+    font-size: 15px;
+    border: 5px solid #477665;
+    border-radius: 5px;
+    box-sizing: border-box; /* Make sure that padding and width stays in place */
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+  }
+  
+  input[type=submit] {
+    background-color: #477665;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 5px;
+    font-family: optima;
+  }
+  
+  input[type=submit]:hover {
+    background-color: #A6EDF8;
+  }
+  
+  .contact-form {
+    border-radius: 5px;
+    background-color:white;
+    padding: 40px;
+    font-size: 25px;
+    color: #477665;
+  }
